@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-31T16:18:44Z",
-  "count_outdated" : 444,
-  "uniques_outdated" : 277,
+  "timestamp" : "2023-08-11T08:16:02Z",
+  "count_outdated" : 446,
+  "uniques_outdated" : 278,
   "count" : 447,
   "uniques" : 279,
   "clones" : [
-    {
-      "timestamp": "2023-07-28T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-30T00:00:00Z",
       "count": 1,
